# ProjectBankCPP

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/application/dto/: commands.h  responses.h
src/application/ports/: account_repository.h  client_repository.h  transaction_repository.h
src/application/services/: id_generator.cpp  id_generator.h  timestamp.h
src/application/use_cases/: create_client_use_case.cpp  create_client_use_case.h  deposit_money_use_case.cpp  deposit_money_use_case.h  list_accounts_use_case.cpp  list_accounts_use_case.h  list_clients_use_case.cpp  list_clients_use_case.h  open_account_use_case.cpp  open_account_use_case.h  show_balance_use_case.cpp  show_balance_use_case.h  show_transaction_history_use_case.cpp  show_transaction_history_use_case.h  transfer_money_use_case.cpp  transfer_money_use_case.h  withdraw_money_use_case.cpp  withdraw_money_use_case.h
src/domain/account/: account_factory.cpp  account_factory.h  account_id.cpp  account_id.h  account_status.h  account_type.h  bank_account.cpp  bank_account.h
src/domain/client/: client.cpp  client.h  client_id.cpp  client_id.h
src/domain/errors/: domain_error.cpp  domain_error.h
src/domain/money/: money.cpp  money.h
src/domain/policies/: commission_policy.cpp  commission_policy.h  limit_policy.cpp  limit_policy.h
src/domain/services/: transfer_service.cpp  transfer_service.h
src/domain/transaction/: transaction.cpp  transaction.h  transaction_id.cpp  transaction_id.h  transaction_type.h
src/infrastructure/facades/: banking_facade.cpp  banking_facade.h
src/infrastructure/repositories/: in_memory_account_repository.cpp  in_memory_account_repository.h  in_memory_client_repository.cpp  in_memory_client_repository.h  in_memory_transaction_repository.cpp  in_memory_transaction_repository.h  json_account_repository.cpp  json_account_repository.h  json_client_repository.cpp  json_client_repository.h  json_transaction_repository.cpp  json_transaction_repository.h
tests/: test_main.cpp
